Stats導入、少し最適化

--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "vite": "^5.3.1"
   },
   "dependencies": {
+    "-": "^0.0.1",
+    "@types/stats.js": "^0.17.3",
+    "D": "^1.0.0",
     "fast-xml-parser": "^4.4.0",
-    "p5": "^1.9.4"
+    "p5": "^1.9.4",
+    "stats.js": "^0.17.0"
   }
 }
